# tokenash

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENTERPRISE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  codecov.yml  docker-bake.hcl  docker-compose.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.memory.yml  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
REALIGNMENT/: 00-overview.md  01-bug-list.md  02-architecture.md  03-phase-A-lockdown.md  04-phase-B-live-zone.md  05-phase-C-rust-proxy.md  06-phase-D-bedrock-vertex.md  07-phase-E-cache-stabilization.md  08-phase-F-auth-mode.md  09-phase-G-rtk-observability.md  10-phase-H-python-retirement.md  11-phase-I-test-infra.md  12-decisions-needed.md  INDEX.md
agent-evals/: README.md  pyproject.toml
agno/: index.html
api/: index.html
benchmarks/: __init__.py  adversarial_ccr_tests.py  agent_cost_benchmark.py  bench_latency.py  bench_relevance.py  bench_transforms.py  cache_bust_trace_report.py  cache_validation_bundle.py  ccr_regression_benchmark.py  claude_session_branch_compare.py  claude_session_mode_benchmark.py  comprehensive_eval.py  compression_benchmark.py  conftest.py  dynamic_detector_benchmark.py  index.html  prefix_cache_benchmark.py  proxy_mode_benchmark.py  real_world_agent_benchmark.py  (+5 more)
plugins/tokenash-oauth2/: CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
plugins/tokenash-oauth2/src/tokenash_oauth2/: __init__.py  middleware.py  provider.py
plugins/tokenash-oauth2/tests/: test_oauth2.py
(+1263 files in other folders)
